force-app/main/default/objects/Musician__c/Musician__c.object-meta.xml
<CustomObject>
    <label>Musician</label>
    <nameField>
        <label>Musician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Musicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>