force-app/main/default/objects/Musician__c/fields/Deathday__c.field-meta.xml
<CustomField>
    <fullName>Deathday__c</fullName>
    <label>Deathday</label>
    <type>Date</type>
</CustomField>