force-app/main/default/objects/Musician__c/fields/Live_or_dead__c.field-meta.xml
<CustomField>
    <fullName>Live_or_dead__c</fullName>
    <formula>IF( ISBLANK( Deathday__c ) , &apos;Alive&apos;, &apos;Dead&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live or dead</label>
    <type>Text</type>
</CustomField>