force-app/main/default/objects/Musician__c/fields/Total_Songs__c.field-meta.xml
<CustomField>
    <fullName>Total_Songs__c</fullName>
    <label>Total Songs</label>
    <summaryForeignKey>Song__c.Musician__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>